# NUDGE

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_ARCHITECTURE.md  JUDGES_GUIDE.md  LICENSE  PYPI_README.md  README.md  brief.md  pyproject.toml
.claude/agents/: nudge-audit.md  nudge-jax-physics.md  nudge-red-team.md  nudge-uq-fixer.md
.github/ISSUE_TEMPLATE/: anomaly.yml
.github/workflows/: ci.yml  publish.yml  slow-tests.yml
design/: ABSTENTION_ANALYSIS.md  AUTOMATED_SCIENTIST.md  CAPABILITY_IMPLEMENTATION_PLANS.md  CAPABILITY_ROADMAP.md  CONSTITUTIVE_CONTROL.md  DEEP_RESEARCH_adjoint_sloppiness_datasets.md  DEEP_RESEARCH_drug_discovery_directions.md  DEMO_VIDEO_SCRIPT.md  EXTENSIBILITY_SPIKE.md  FAILSAFE_REDTEAM.md  FAILSAFE_REDTEAM_2.md  FAILSAFE_REDTEAM_3.md  FAILSAFE_REDTEAM_4.md  FAILSAFE_REDTEAM_5.md  FAILSAFE_REDTEAM_6.md  FAILSAFE_REDTEAM_7.md  GENERATOR_DESIGN.md  INTEGRATION_FEASIBILITY.md  MICROBIOME_DATA_GATE.md  NORMAN_DISCREPANCY_ANALYSIS.md  NOTEBOOK_LIBRARY.md  ONTOLOGY.md  PERFORMANCE.md  PERTURBED_CONFOUND_STRATEGY.md  PITCH.md  RELEASE_CHECKLIST.md  STATE.md  TOGGLE_ATTRIBUTION_RESEARCH.md  VISUALIZATION_DESIGN.md  WORKING_BACKWARDS.md
design/automated_scientist/: LEDGER.md  README.md
design/hardening/: LEDGER.md  POST_MOAT_LOOP_PROMPT.md  README.md
docs/: bibliography.bib  index.md  known_limitations.yaml
docs/architecture/: verification_vs_validation.md
docs/mechanism_cards/: README.md  _template.md  bifurcation_proximity.md  constitutive_control.md  cross_modality_readout.md  differential_attribution.md  dose_response_attribution.md  epistasis_attribution.md  fibrillization.md  hidden_node_abstention.md  hill_activation.md  hill_repression.md  inverse_design.md  linear_effect.md  linear_integrator.md  lotka_volterra_attribution.md  matrix_free_identifiability.md  multi_reporter.md  optimal_experimental_design.md  ras_switch_1node.md  ras_switch_2node.md  readout.md  saturating_integrator.md  self_activation_switch.md  toggle.md
docs/user_guide/: claude_science.md  data_contract.md  installation.md  quickstart.md
notebooks/: 4_Differentiable_OED_Moat.ipynb  AD_QSP_Clinical_Demo.ipynb  Aggregation_Kinetics.ipynb  Chure_LacI_Benchmark.ipynb  Constitutive_Control.ipynb  Differential.ipynb  Hidden_Node_Abstention.ipynb  Inverse_Design.ipynb  Multi_Reporter.ipynb  Norman_Synergy.ipynb  OCT4_NANOG_Flagship.ipynb  Optimal_Experimental_Design.ipynb  README.md  Robustness_Dial.ipynb  Temporal_Ecology.ipynb  gLV_Experimental_Design.ipynb
scripts/: check_anomalies.py  check_citations.py  check_hardening_append_only.py  check_impl_mapping.py  check_mechanism_cards.py  demo_gradient_oed.py  demo_matrix_free_scale.py  demo_nlme_scale.py
scripts/ai/: generate_decoy.py  mock_scientist.py  paper_to_mechanism.py  reviewer_agent.py
scripts/analysis/: norman_discrepancy.py  toggle_gain_abstention_probe.py  toggle_gain_abstention_probe_RESULTS.txt  toggle_gain_mechanism.py
scripts/demo_ab/: README.md  ad_qsp_forward.py  ad_qsp_model.py  ad_qsp_nlme_forward.py  ad_qsp_nlme_model.py  cohort.csv  cohort.npz  cohort_nlme.npz  make_dataset.py  make_nlme_dataset.py
scripts/eval/: README.md  blind_harness.py  grade_blind_eval.py  make_blind_case.py  proto_earnguard_vs_redteam.py  proto_earnguard_vs_redteam_RESULTS.txt  proto_nuisance_confirm.py  proto_nuisance_sweep.py  run_blind_eval.py
scripts/perf/: bench_dose_response.py  bench_jax_warmup.py  bench_loader_gather.py
scripts/redteam/: bifurcation_probe.py  constitutive_control_batch_confound.py  constitutive_dispersion_route.py  core_parsimony_mixture.py  cross_modality_knob_probe.py  design_p3_regression_check.py  design_safety_gate_absolute_proximity.py  differential_additive_confound.py  differential_content_capture_confound.py  differential_doublet_rate_confound.py  differential_gate_knifeedge.py  differential_multiplicative_confound.py  differential_multiplicative_deflating.py  differential_p4_subgate_probe.py  differential_small_mult_gain_hole.py  differential_small_mult_testregime.py  differential_sub25_band_probe.py  differential_subset_scale_confound.py  epistasis_dose_probe.py  epistasis_pipeline_confound.py  hidden_node_lone_leading_probe.py  lyapunov_batch_scale_collusion.py  lyapunov_multi_gain_threshold_hole.py  lyapunov_perturbed_batch_ceiling_hole.py  multi_reporter_batch_confound.py  nearfold_knifeedge_regression.py  nearfold_thirdpoint_hole.py  ode_identifiability_float32_null_rescan.py  oed_shipped_demo_and_masking_rescan.py  sloppiness_matrixfree_iterative_mislabel.py  transition_mode_false_gain.py
scripts/vv/: FINDINGS.md  ad_qsp_nlme_scaling_RESULTS.json  ad_qsp_oed_RESULTS.json  ad_qsp_scaling_RESULTS.json  adjoint_scaling.py  adjoint_scaling_RESULTS.json  constitutive_control.py  fisher_extrinsic.py  fisher_sloppiness.py  gen_proctor2013.py  gladstone_attribution.py  gladstone_multitimepoint.py  glv_design_sweep.py  glv_design_sweep_RESULTS.json  mdsine2_attribution.py  mdsine2_attribution_RESULTS.json  mdsine2_glv.py  overnight_sweep.py  p5_measure.py  sloppiness_scaling.py  sloppiness_scaling_RESULTS.json  sloppiness_validation.py  sloppiness_validation_RESULTS.json  stein_attribution.py  stein_attribution_RESULTS.json  stein_glv.py  toggle_lyapunov_ssa.py  toggle_lyapunov_ssa_RESULTS.txt
src/nudge/: __init__.py  circuits.py  cli.py  knowledge.py  provenance.py  service.py  warmup.py
tests/: conftest.py  test_circuits.py  test_knowledge.py  test_service.py  test_warmup.py
tests/cli/: test_cli.py
tests/core/: test_builder.py  test_circuit.py  test_fixed_points.py  test_mode_covariance.py
tests/data/: test_decoy_generators.py  test_ingest.py  test_noise.py  test_perturbseq_loader.py  test_synthetic.py  test_telegraph.py  test_toggle.py
tests/decoys/: test_battery.py
tests/design/: test_invert.py
tests/docs/: test_mechanism_cards.py
tests/inference/: test_bifurcation.py  test_bridge.py  test_classify.py  test_constitutive.py  test_cross_modality.py  test_differential.py  (+18 more)
(+176 files in other folders)
